Minor change to lessons - test

--- a/exercises/ex08/data_wrangling.ipynb
+++ b/exercises/ex08/data_wrangling.ipynb
@@ -11,72 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of data_utils failed: Traceback (most recent call last):\n",
-      "  File \"/Users/prithviadiga/Library/Python/3.10/lib/python/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/Users/prithviadiga/Library/Python/3.10/lib/python/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
-      "  File \"/Users/prithviadiga/comp110-22f-workspace/exercises/ex08/data_utils.py\", line 7, in <module>\n",
-      "    from symbol import return_stmt\n",
-      "ModuleNotFoundError: No module named 'symbol'\n",
-      "]\n",
-      "[autoreload of data_utils failed: Traceback (most recent call last):\n",
-      "  File \"/Users/prithviadiga/Library/Python/3.10/lib/python/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/Users/prithviadiga/Library/Python/3.10/lib/python/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
-      "  File \"/Users/prithviadiga/comp110-22f-workspace/exercises/ex08/data_utils.py\", line 7, in <module>\n",
-      "    from symbol import return_stmt\n",
-      "ModuleNotFoundError: No module named 'symbol'\n",
-      "]\n",
-      "[autoreload of data_utils failed: Traceback (most recent call last):\n",
-      "  File \"/Users/prithviadiga/Library/Python/3.10/lib/python/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/Users/prithviadiga/Library/Python/3.10/lib/python/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
-      "  File \"/Users/prithviadiga/comp110-22f-workspace/exercises/ex08/data_utils.py\", line 7, in <module>\n",
-      "    from symbol import return_stmt\n",
-      "ModuleNotFoundError: No module named 'symbol'\n",
-      "]\n",
-      "[autoreload of data_utils failed: Traceback (most recent call last):\n",
-      "  File \"/Users/prithviadiga/Library/Python/3.10/lib/python/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/Users/prithviadiga/Library/Python/3.10/lib/python/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
-      "  File \"/Users/prithviadiga/comp110-22f-workspace/exercises/ex08/data_utils.py\", line 7, in <module>\n",
-      "    from symbol import return_stmt\n",
-      "ModuleNotFoundError: No module named 'symbol'\n",
-      "]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "__author__ = \"730480357\""
    ]
@@ -90,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +262,7 @@
        "'<table>\\n<thead>\\n<tr><th>school  </th><th>mascot         </th><th style=\"text-align: right;\">  founded</th></tr>\\n</thead>\\n<tbody>\\n<tr><td>UNC     </td><td>Rameses        </td><td style=\"text-align: right;\">     1789</td></tr>\\n<tr><td>NCSU    </td><td>Wolf           </td><td style=\"text-align: right;\">     1887</td></tr>\\n<tr><td>Duke    </td><td>A Literal Devil</td><td style=\"text-align: right;\">     1838</td></tr>\\n</tbody>\\n</table>'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +422,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'concat' from 'data_utils' (/Users/prithviadiga/comp110-22f-workspace/exercises/ex08/data_utils.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/Users/prithviadiga/comp110-22f-workspace/exercises/ex08/data_wrangling.ipynb Cell 20\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/prithviadiga/comp110-22f-workspace/exercises/ex08/data_wrangling.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdata_utils\u001b[39;00m \u001b[39mimport\u001b[39;00m concat\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/prithviadiga/comp110-22f-workspace/exercises/ex08/data_wrangling.ipynb#X25sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m additional_table: \u001b[39mdict\u001b[39m[\u001b[39mstr\u001b[39m, \u001b[39mlist\u001b[39m[\u001b[39mstr\u001b[39m]] \u001b[39m=\u001b[39m columnar(read_csv_rows(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mDATA_DIRECTORY\u001b[39m}\u001b[39;00m\u001b[39m/nc_durham_2015_march_27.csv\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/prithviadiga/comp110-22f-workspace/exercises/ex08/data_wrangling.ipynb#X25sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m combined \u001b[39m=\u001b[39m concat(data_cols_head, additional_table)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'concat' from 'data_utils' (/Users/prithviadiga/comp110-22f-workspace/exercises/ex08/data_utils.py)"
+     ]
+    }
+   ],
    "source": [
     "from data_utils import concat\n",
     "\n",
@@ -531,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
